<resources>
    <string name="app_name">GESTORADE</string>
    <string name="request_id_token">527625456564-mg3j0ucdarcnm0tljqgfr9frngn65q3n.apps.googleusercontent.com</string>
    <string name="userName">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnEntrarGoogle">Entrar con Google</string>
    <string name="salir">Salir</string>
    <string name="enviar">Enviar</string>
    <string name="crear">Crear</string>
    <string name="modificar">Modificar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="generarUser">Generar Usuario</string>
    <string name="registrar">Registrar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="act_add_pedido">De compras</string>
    <string name="registroUser">REGISTRO DE USUARIO</string>
    <string name="codVerificacion">Codigo verificación</string>

    <string name="nif">NIF *:</string>
    <string name="cantidad">cantidad</string>
    <string name="nombre">Nombre *:</string>
    <string name="direccion">Dirección *:</string>
    <string name="email">Email *:</string>
    <string name="telefono">Telefono *:</string>
    <string name="observaciones">Observaciones :</string>
    <string name="phone">Telefono</string>

    <string name="proveedor">Proveedor *:</string>
    <string name="precio">Precio *:</string>
    <string name="calidad">Calidad :</string>
    <string name="tipoVentaForm">Tipo venta *:</string>
    <string name="tiempoEnvioProv">Tiempo de envio *:</string>
    <string name="msgCardEnvio">Envio en:</string>
    <string name="dia">Días</string>
    <string name="precioCard">Precio </string>
    <string name="enviarA">Enviar pedido a: </string>

    strWhatsappNoInstalado
    <string-array name="arrayTipoVentas">
        <item></item>
        <item>Unidad</item>
        <item>Peso</item>
    </string-array>


    <string-array name="arrayTipoEnvio">
        <item></item>
        <item>WhatsApp</item>
        <item>Correo</item>
    </string-array>

    <string name="favoritos">Favoritos</string>
    <string name="tiempoEnvio">Envio 48 h</string>
    <string name="tipoVenta">Tipo venta</string>


    <string name="Atencion">Precaución!!</string>

    <string name="err_whatsappNoInstalado">Necesitas instalar Whatsapp</string>

    <string name="err_camposVacios">Rellena los campos con *</string>
    <string name="StrCheckSesion">Mantener sesion iniciada</string>
    <string name="smsBienvenida">Pedidos pendientes de recibir</string>
    <string name="txtMostrarTodos">Mostrar tambien los pedidos recibidos</string>
    <string name="menuInicio">Pedidos</string>
    <string name="menuProveedores">Proveedores</string>
    <string name="menuProductos">Productos</string>
    <string name="topTittle">Gestion de pedidos</string>


    <string name="msgPedidoCrearSucc">Pedido realizado Correctamente</string>
    <string name="msgPedidoCrearNoSucc">Problema al realizar el pedido</string>
    <string name="msgProveedorCrearSucc">Proveedor creado correctamente</string>
    <string name="msgProveedorCrearNoSucc">Problema al crear el proveedor</string>
    <string name="msgProveedorModSucc">Proveedor modificado correctamente</string>
    <string name="msgProveedorModNoSucc">Proveedor modificado correctamente</string>
    <string name="msgBorrarProveedor">¿Quieres borrar este proveedor?</string>
    <string name="msgBorrarProveedorNoSucc">Problema al borrar el proveedor</string>

    <string name="msgUsuarioCrearSucc">Usuario creado correctamente</string>
    <string name="msgUsuarioCrearNoSucc">Problema al crear usuario</string>
    <string name="msgProductoCrearSucc">Producto creado correctamente</string>
    <string name="msgProductoCrearNoSucc">Problema al crear el producto</string>
    <string name="msgProductoModSucc">Producto modificado correctamente</string>
    <string name="msgProductoModNoSucc">Problema al modificar el producto</string>
    <string name="msgBorrarProducto">¿Quieres borrar este producto?</string>
    <string name="msgBorrarProductoNosucc">Problema al borrar el producto</string>

    <string name="msgPedidoA">Buenas, enviame estos productos a la direccion</string>
    <string name="msgDespedidaPed">Si hay algun problema contactame cuanto antes.</string>
    <string name="msgGracias">Gracias, un saludo</string>
    <string name="envioPor">Enviar por*:</string>


    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Cerrar</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>