<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gestoradetfg.Fragments.HomeFragment"
        android:label="@string/menuInicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_proveedor"
        android:name="com.example.gestoradetfg.Fragments.ProveedorFragment"
        android:label="@string/menuProveedores"
        tools:layout="@layout/fragment_proveedor" />

    <fragment
        android:id="@+id/navigation_producto"
        android:name="com.example.gestoradetfg.Fragments.ProductoFragment"
        android:label="@string/menuProductos"
        tools:layout="@layout/fragment_producto" />

</navigation>